# midnight-cli

./: .gitignore  AIKEN_BUILD_STATUS.md  AIKEN_COMPILATION_STATUS.md  AIR_GAP_DESIGN.md  AIR_GAP_IMPLEMENTATION_STATUS.md  CLAUDE.md  CONTRACTS_WORKFLOW.md  Cargo.toml  DEPLOYMENT_TESTING_GUIDE.md  FEDERATED_OPS_GOVERNANCE.md  GOVERNANCE_DEPLOYMENT.md  NOTICE  PARAMETER_APPLICATION_FIX.md  PROPOSAL_IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  RUNTIME_BUG_ANALYSIS.md  SETUP_FLOW.txt  SETUP_GUIDE.md  SETUP_QUICK_REFERENCE.md  TESTING.md  TESTING_READY.md  TEST_PLAN.md  TODO.md  build.rs  flake.nix  test-sanchonight-setup.sh
contracts/: federated_ops_governance_federated_ops_governance_spend.plutus  one_shot_nft_one_shot_nft.plutus  simple_mint_simple_mint.plutus  tech_auth_governance_tech_auth_governance_spend.plutus
examples/: examine_reset_members.rs  examine_type_0.rs  examine_type_248.rs
perSystem/: devShells.nix  packages.nix
src/: lib.rs  main.rs  utxorpc.rs
src/application/: governance_deployment.rs  governance_rotation.rs  key_derivation.rs  key_generation.rs  mod.rs  witness_assembly.rs  witness_creation.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: debug.rs  deploy.rs  genesis.rs  governance.rs  key.rs  mnemonic.rs  mod.rs  query.rs  rotate.rs  tx.rs  tx_builder.rs  validator.rs  witness.rs
src/contracts/: governance.rs  mod.rs  nft.rs  params.rs
src/crypto/: ecdsa.rs  ed25519.rs  mnemonic.rs  mod.rs  secp256k1_payment.rs  sr25519.rs  suri_parser.rs
src/domain/: derivation.rs  error.rs  key_material.rs  key_type.rs  mod.rs  payment.rs
src/storage/: cardano_format.rs  gpg.rs  key_reader.rs  key_writer.rs  mod.rs  text_envelope.rs  transaction_metadata.rs
src/types/: federated_ops.rs  mod.rs
test-chainspec/: chain-spec.json  cnight-config.json  federated-authority-config.json  ics-config.json  pc-chain-config.json  permissioned-candidates-config.json  registered-candidates-addresses.json  reserve-config.json  system-parameters-config.json
test-deployment/member-keys/: council-1.json  council-2.json  council-3.json  ta-1.json  ta-2.json
tests/: council_rotation_test.rs  decode_fedops_tx.rs  governance_contracts_test.rs
validators/: aiken.toml  plutus.json
validators/validators/: council_governance.ak  federated_ops_governance.ak  one_shot_nft.ak  simple_mint.ak  tech_auth_governance.ak
validators/validators-temp/: council_governance.ak  federated_ops_governance.ak  tech_auth_governance.ak
