[package]
name = "midnight-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Midnight Foundation"]
description = "Key management and governance tooling for Midnight Network validators and participants"
repository = "https://github.com/midnight-network/midnight-cli"
keywords = ["midnight", "blockchain", "crypto", "governance", "keys"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
# Substrate primitives
sp-core = { version = "34", default-features = false, features = ["std", "full_crypto"] }

# Core cryptography
schnorrkel = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
hex = "0.4"

# BIP39
bip39 = { version = "2.0", features = ["rand"] }

# Security
secrecy = "0.8"
zeroize = "1.7"
sha2 = "0.10"

# Utils
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
