[package]
name = "midnight-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Midnight Foundation"]
description = "Key management and governance tooling for Midnight Network validators and participants"
repository = "https://github.com/midnight-network/midnight-cli"
keywords = ["midnight", "blockchain", "crypto", "governance", "keys"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
# Substrate primitives
sp-core = { version = "34", default-features = false, features = ["std", "full_crypto"] }
parity-scale-codec = { version = "3.0", features = ["derive"] }
scale-info = "2.0"

# RPC client
subxt = { version = "0.37", features = ["substrate-compat"] }
jsonrpsee = { version = "0.24", features = ["ws-client", "client"] }

# gRPC for UTxORPC (hayate)
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Core cryptography
schnorrkel = "0.11"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
hex = "0.4"

# BIP39 and BIP32
bip39 = { version = "2.0", features = ["rand"] }
bip32 = "0.5"

# secp256k1 for payment keys
secp256k1 = { version = "0.31", features = ["rand", "global-context"] }

# Security
secrecy = "0.8"
zeroize = "1.7"
sha2 = "0.10"

# Utils
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
protobuf-src = "2"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
